--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -101,6 +101,12 @@
                             center: 'title',
                             right: 'month,agendaWeek,agendaDay'
                         },
+
+                        dayClick:  function(date, jsEvent, view) {
+                            document.location.href="/booking/add/";
+
+                        },
+
                         editable: true,
                         droppable: true, // this allows things to be dropped onto the calendar !!!
                         drop: function(date, allDay) { // this function is called when something is dropped
@@ -134,15 +140,15 @@
 
 
 
-                    // change the border color just for fun
-                    $(this).css('border-color', 'red');
+                            // change the border color just for fun
+                            $(this).css('border-color', 'red');
+
+                        }
+                    });
+
 
                 }
             });
-
-
-        }
-        });
         }
 
     </script>
