--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -4737,10 +4737,10 @@ div.tagsinput span.tag {
     font-size:20px;
     color:#fff;
 }
-.notification-info {
-    margin-left:56px;
-    margin-top:-40px;
-}
+/*.notification-info {*/
+    /*margin-left:56px;*/
+    /*margin-top:-40px;*/
+/*}*/
 .notification-meta {
     margin-bottom:3px;
     padding-left: 0;
