--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -39,7 +39,7 @@
 
                 <h1>Assign Tuner</h1>
                 <div class="table-responsive">
-                    <table id="requested_bookings" class="table table-striped table-condensed">
+                    <table id="requested_bookings" class="table table-condensed">
                         <thead>
                         <tr>
                             <th>When</th>
@@ -68,7 +68,7 @@
             <div class="col-md-6">
                 <h1>Recent Bookings</h1>
                 <div class="table-responsive">
-                    <table id="recent_bookings" class="table table-striped table-condensed">
+                    <table id="recent_bookings" class="table table-condensed">
                         <thead>
                         <tr>
                             <th>Status</th>
@@ -97,8 +97,8 @@
 
 {% block js %}
 
-    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.tablesorter.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.tablesorter.widgets.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.tablesorter.min.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.tablesorter.widgets.min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/bootstrap-datetimepicker.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/fullcalendar/fullcalendar.js"></script>
 
